--- a/public/bower.json
+++ b/public/bower.json
@@ -31,9 +31,10 @@
     "documentation"
   ],
   "dependencies": {
-      "angular": "~1.5.0",
-      "angular-cookies": "~1.5.0",
-      "angular-bootstrap": "~1.0.3",
-      "angular-ui-router": "^0.2.15"
+    "angular": "~1.5.0",
+    "angular-cookies": "~1.5.0",
+    "angular-bootstrap": "~1.0.3",
+    "angular-ui-router": "^0.2.15",
+    "bootstrap-table": "^1.10.1"
   }
 }
