--- a/public/bower.json
+++ b/public/bower.json
@@ -35,6 +35,7 @@
     "angular-cookies": "~1.5.0",
     "angular-bootstrap": "~1.3.2",
     "angular-ui-router": "^0.2.15",
-    "bootstrap-table": "^1.10.1"
+    "bootstrap-table": "^1.10.1",
+	"angular-ui-calendar": "latest"
   }
 }
