--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ coverage/
 # MEAN.js app and assets
 # ======================
 public/dist/
+public/src
 uploads
 modules/users/client/img/profile/uploads
 config/env/local.js
