--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.13.1",
+    "express-jwt": "^3.4.0",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.1.6",
     "mongoose": "^4.4.10",
     "morgan": "~1.6.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
