--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "jsonwebtoken": "^7.1.6",
     "mongoose": "^4.4.10",
     "morgan": "~1.6.1",
+    "node-schedule": "^1.1.1",
+    "nodemailer": "^2.5.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "sendgrid": "^4.0.1",
     "serve-favicon": "~2.3.0"
   }
 }
