--- a/public/bower.json
+++ b/public/bower.json
@@ -36,9 +36,10 @@
     "angular-bootstrap": "~1.3.2",
     "angular-ui-router": "^0.2.15",
     "bootstrap-table": "^1.10.1",
-	   "angular-ui-calendar": "1.0.1"
+    "angular-ui-calendar": "1.0.1",
+    "angularjs-dropdown-multiselect": "^1.5.2"
   },
-  "resolutions":{
+  "resolutions": {
     "angular": "~1.5.7"
   }
 }
