--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "sendgrid": "^4.0.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+	"bower" : "1.7.7",
+	"nodemon" : "1.9.1" 
   }
 }
