--- a/package.json
+++ b/package.json
@@ -23,7 +23,24 @@
     "passport-local": "^1.0.0",
     "sendgrid": "^4.0.1",
     "serve-favicon": "~2.3.0",
-	"bower" : "1.7.7",
-	"nodemon" : "1.9.1" 
+	  "bower" : "1.7.7",
+	  "nodemon" : "1.9.1",
+
+    "R2": "^1.4.3",
+    "grunt": "~0.4.5",
+    "grunt-bootlint": "^0.9.1",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-csslint": "^0.5.0",
+    "grunt-contrib-cssmin": "^0.12.2",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-less": "^0.12.0",
+    "grunt-contrib-uglify": "^0.7.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-cssjanus": "^0.2.4",
+    "grunt-image": "^1.0.5",
+    "grunt-includes": "^0.4.5"
+
+
   }
 }
