--- a/package.json
+++ b/package.json
@@ -4,33 +4,22 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "postinstall" : "sh ./public.sh"
+    "postinstall": "sh ./public.sh"
   },
   "dependencies": {
+    "R2": "^1.4.3",
     "body-parser": "~1.13.2",
+    "bower": "1.7.7",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.1",
     "express-jwt": "^3.4.0",
-    "jade": "~1.11.0",
-    "jsonwebtoken": "^7.1.6",
-    "mongoose": "^4.4.10",
-    "morgan": "~1.6.1",
-    "node-schedule": "^1.1.1",
-    "nodemailer": "^2.5.0",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "sendgrid": "^4.0.1",
-    "serve-favicon": "~2.3.0",
-	  "bower" : "1.7.7",
-	  "nodemon" : "1.9.1",
-
-    "R2": "^1.4.3",
     "grunt": "~0.4.5",
     "grunt-bootlint": "^0.9.1",
-    "grunt-contrib-concat": "^1.0.1",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-csslint": "^0.5.0",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-jshint": "^0.11.2",
@@ -39,8 +28,17 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-cssjanus": "^0.2.4",
     "grunt-image": "^1.0.5",
-    "grunt-includes": "^0.4.5"
-
-
+    "grunt-includes": "^0.4.5",
+    "jade": "~1.11.0",
+    "jsonwebtoken": "^7.1.6",
+    "mongoose": "^4.4.10",
+    "morgan": "~1.6.1",
+    "node-schedule": "^1.1.1",
+    "nodemailer": "^2.5.0",
+    "nodemon": "1.9.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "sendgrid": "^4.0.1",
+    "serve-favicon": "~2.3.0"
   }
 }
