--- a/public/package.json
+++ b/public/package.json
@@ -7,12 +7,12 @@
     "url": "git://github.com/almasaeed2010/AdminLTE.git"
   },
   "license": "MIT",
-  "devDependencies": {
-    "R2": "^1.4.3",
+  "dependencies": {
     "grunt": "~0.4.5",
     "grunt-bootlint": "^0.9.1",
-    "grunt-contrib-concat": "^1.0.1",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-csslint": "^0.5.0",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-jshint": "^0.11.2",
