--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "bower": "1.7.7",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "docxtemplater": "^2.1.3",
     "dotenv": "^2.0.0",
     "express": "~4.13.1",
     "express-jwt": "^3.4.0",
+    "formidable": "^1.0.17",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.1.6",
     "mongoose": "^4.4.10",
@@ -25,6 +27,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "sendgrid": "^4.0.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "string-template": "^1.0.0"
   }
 }
