--- a/public/bower.json
+++ b/public/bower.json
@@ -38,7 +38,8 @@
     "bootstrap-table": "^1.10.1",
     "angular-ui-calendar": "1.0.1",
     "angularjs-dropdown-multiselect": "^1.5.2",
-    "angular-ui-grid": "^3.2.1"
+    "angular-ui-grid": "^3.2.1",
+    "ng-file-upload": "^12.0.4"
   },
   "resolutions": {
     "angular": "~1.5.7"
